[package]
name = "pkcs_jwk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
clap = "2.33.3"
josekit = "0.7.4"
openssl = "0.10.38"
pkcs8 = {version = "0.7.6", features = ["alloc", "pem", "pkcs1", "std"]}
thiserror = "1.0.30"
