[package]
name = "pkcs_jwk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
base64 = "0.13.0"
clap = "2.33.3"
josekit = "0.7.4"
openssl = "0.10.38"
pkcs8 = {version = "0.7.6", features = ["alloc", "encryption", "pem", "pkcs1", "pkcs5", "std"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.70"
thiserror = "1.0.30"
